Generating full project